test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: todo-app
spec:
  containers:
  - name: test-container
    image: nginx:latest
    ports:
    - containerPort: 80
