corrected_service_config.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"todo-frontend","namespace":"todo-app"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":3000}],"selector":{"app.kubernetes.io/instance":"todo-frontend","app.kubernetes.io/name":"todo-frontend"},"type":"LoadBalancer"}}
    meta.helm.sh/release-name: todo-frontend
    meta.helm.sh/release-namespace: todo-app
  creationTimestamp: "2026-02-04T08:25:09Z"
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    app.kubernetes.io/instance: todo-frontend
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: todo-frontend
    app.kubernetes.io/version: 1.0.0
    helm.sh/chart: todo-frontend-0.1.0
  name: todo-frontend
  namespace: todo-app
  resourceVersion: "341557"
  uid: 5163d3f8-8158-429b-96af-81d718f988d6
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.0.3.181
  clusterIPs:
  - 10.0.3.181
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    nodePort: 31119
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: todo-frontend
    app.kubernetes.io/name: todo-frontend
  sessionAffinity: None
  type: LoadBalancer
